# C-

./: README.md
Paralell/Intro/excercises/ex3/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  ex3  ex3.cpp
Paralell/Intro/excercises/ex4/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  ex4  ex4.cpp
Paralell/Intro/excercises/exc1/: CMakeLists.txt  README.md  exc1.cpp
Paralell/Intro/excercises/exc2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  ex2  ex2.cpp
